tests/golden/snapshots/render_error__error_variant_with_escapable_message.snap
---
source: tests/golden/render_error.rs
expression: out
---
#[msg("value \"x\" not allowed; use \\n")]
BadInput,
