tests/golden/snapshots/render_error__errors_file_many_variants.snap
---
source: tests/golden/render_error.rs
expression: out
---
use anchor_lang::prelude::*;

#[error_code]
pub enum DemoError {
    // === sunscreen:auto-generated:begin segment=error_variants version=1 generator=error ===
    #[msg("not enough lamports")]
    InsufficientFunds,
    #[msg("caller is not authorized")]
    Unauthorized,
    #[msg("arithmetic overflow")]
    Overflow,
    // === sunscreen:auto-generated:end segment=error_variants ===
}
