tests/golden/snapshots/render_error__errors_file_pascal_case_enum_name.snap
---
source: tests/golden/render_error.rs
expression: out
---
use anchor_lang::prelude::*;

#[error_code]
pub enum MyProgramError {
    // === sunscreen:auto-generated:begin segment=error_variants version=1 generator=error ===
    #[msg("m")]
    X,
    // === sunscreen:auto-generated:end segment=error_variants ===
}
