tests/golden/snapshots/render_error__errors_file_single_variant.snap
---
source: tests/golden/render_error.rs
expression: out
---
use anchor_lang::prelude::*;

#[error_code]
pub enum DemoError {
    // === sunscreen:auto-generated:begin segment=error_variants version=1 generator=error ===
    #[msg("kaboom")]
    Boom,
    // === sunscreen:auto-generated:end segment=error_variants ===
}
